CLI-RustBasedGuessingGame/target/release/build/crossbeam-utils-3d754d6bec3cd034/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
 --> <anon>:1:38
  |
1 |   pub type Probe = core::sync::atomic::AtomicU128;
  |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
 --> /rustc/0442fbabe24ec43636a80ad1f40a0ad92a2e38df/library/core/src/sync/atomic.rs:2761:1
 ::: /rustc/0442fbabe24ec43636a80ad1f40a0ad92a2e38df/library/core/src/sync/atomic.rs:2779:1
  |
  = note: similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
